[gd_scene load_steps=7 format=3 uid="uid://ddgivr14yov5"]

[ext_resource type="Texture2D" uid="uid://djf4r8a1w0y72" path="res://Quest/lantern_quest/bubble_lantern.png" id="1_xftk1"]
[ext_resource type="Script" path="res://Quest/lantern_quest/lighting_lantern.gd" id="2_s0400"]
[ext_resource type="Texture2D" uid="uid://gbvn3ub1ubcb" path="res://Quest/lantern_quest/bubble_lantern_unlit.png" id="3_ah4lw"]
[ext_resource type="Resource" uid="uid://dgvgdem2lwae3" path="res://inventory/items/light.tres" id="4_glnlg"]
[ext_resource type="AudioStream" uid="uid://cct35kge7tsi4" path="res://Sound_Effects/Wood Block1.wav" id="5_bsrua"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0xsjh"]
radius = 1490.0
height = 2980.0

[node name="BubbleLantern" type="Sprite2D"]
texture_filter = 1
position = Vector2(-3, -7)
scale = Vector2(0.1, 0.1)
texture = ExtResource("1_xftk1")
script = ExtResource("2_s0400")
unlit_lantern = ExtResource("1_xftk1")
lit_lantern = ExtResource("3_ah4lw")
light = ExtResource("4_glnlg")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(30, 70)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 6.10352e-05)
shape = SubResource("CapsuleShape2D_0xsjh")

[node name="LightingLantern_Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_bsrua")
volume_db = -0.755
pitch_scale = 2.85

[node name="Node2D" type="Node2D" parent="."]
scale = Vector2(30, 30)

[node name="space" type="Label" parent="Node2D"]
texture_filter = 1
offset_left = -22.6667
offset_top = -48.0
offset_right = 23.3333
offset_bottom = -25.0
text = "Space
"
metadata/_edit_use_anchors_ = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
